[package]
name = "typhoon-native"
version = "0.1.0"
edition = "2024"
description = "TyphooN Terminal — Native GPU renderer (egui + wgpu)"

[[bin]]
name = "typhoon"
path = "src/main.rs"

[dependencies]
# Engine (shared core library)
typhoon-engine = { workspace = true }
# Research-UI view + interaction layer (ADR-125 Phase 2)
typhoon-research-ui = { workspace = true }
# Chart-UI view + chart-local state layer (ADR-125 Target 2)
typhoon-chart-ui = { workspace = true }
# Broker command runtime seam (ADR-125 Target 3)
typhoon-broker-runtime = { workspace = true }

# multi-language indicator transpiler (indicator compilation + execution)
typhoon-transpiler = { workspace = true }

# Native GPU UI — latest stable egui ecosystem (2026-03-27)
eframe = { version = "0.35", default-features = false, features = ["default_fonts", "wayland", "wgpu_no_default_features", "x11"] }
egui = { workspace = true, features = ["default_fonts"] }
egui_plot = "0.36"
# News article rendering: markdown viewer (paragraphs/links/headings/inline images)
# plus the egui_extras image loader so hero images and inline <img>s decode from URL.
# Deliberately NOT a full HTML/JS renderer (no webview, no wry/tao) — see ADR for the
# threat model on remote-content engines inside a financial terminal.
# Loaders kept minimal: image (png/jpeg via the image crate below) + webp +
# http (ehttp URL fetch). svg (resvg/usvg/tiny-skia) and gif are off — finance
# news imagery is raster; re-enable a loader only with a concrete need.
egui_extras = { version = "0.35", default-features = false, features = ["image", "webp", "http"] }
egui_commonmark = { version = "0.24", default-features = false, features = ["load-images"] }
# eframe's `wgpu_no_default_features` deliberately avoids selecting a backend;
# TyphooN is a desktop app, so enable only the native Linux renderer surface we
# need here. Code still imports wgpu types through `eframe::wgpu` to keep the
# API version paired with egui-wgpu.
wgpu = { version = "29", default-features = false, features = ["std", "parking_lot", "vulkan", "wgsl"] }  # Must match egui-wgpu (eframe 0.35 pins wgpu 29)

# Async runtime (shared with engine). net + io-util serve the hand-rolled
# /metrics HTTP responder (metrics.rs) that replaced axum. No tokio::fs use
# in this crate (broker-runtime owns the async file I/O).
tokio = { workspace = true, features = ["rt-multi-thread", "sync", "time", "macros", "net", "io-util"] }

# Regex filter for the News window — lets the user search article headlines
# with /pattern/ syntax in addition to the keyword and comma-separated
# multi-symbol modes. Already transitively in the build via tracing-subscriber.
regex = "1"

# HTTP client (for Kraken API in broker task — matches engine)
reqwest = { workspace = true, features = ["json", "rustls"] }
# Select one process-wide rustls crypto provider explicitly. reqwest pulls
# aws-lc-rs while egui_extras/ehttp/ureq pulls ring, so rustls cannot infer a
# unique provider at runtime unless the binary installs one before TLS use.
rustls = { version = "0.23", default-features = false, features = ["std", "aws_lc_rs"] }

# Date/time formatting (for chart time axis labels)
chrono = { workspace = true }

# Native file dialog
rfd = "0.17"

# Serialization for session persistence
serde = { workspace = true }
serde_json = { workspace = true }

# Safe byte casting for GPU buffer I/O (replaces unsafe custom Pod trait)
bytemuck = { version = "1", features = ["derive"] }

# Prometheus metrics — text exposition only, so the default protobuf
# encoder stays off. The /metrics endpoint is a minimal hand-rolled
# HTTP responder in metrics.rs (axum and its tower/matchit subtree were
# removed; the framework served exactly one GET route).
prometheus = { version = "0.14", default-features = false }

# Image encoding (lossless WebP screenshot export + news article hero images
# loaded via egui_extras → needs png/jpeg decode too).
image = { version = "0.25", default-features = false, features = ["webp", "png", "jpeg"] }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# Custom allocator — mimalloc is 5-15% faster than system malloc on small alloc heavy workloads
mimalloc = { version = "0.1", default-features = false }

# Windows AC-power probe for ADR-205 idle auto-compact gate
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_System_Power"] }
