[package]
name = "typhoon-transpiler"
version = "0.1.0"
edition = "2024"
description = "TyphooN multi-language indicator transpiler and WASM/WGSL codegen pipeline"
license = "BUSL-1.1"

[dependencies]
pest = "2.8"
pest_derive = "2.8"
wasm-encoder = "0.252"
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
