[package]
name = "typhoon-transpiler"
version = "0.1.0"
edition = "2024"
description = "TyphooN multi-language indicator transpiler and WASM/WGSL codegen pipeline"
license = "BUSL-1.1"

[dependencies]
pest = { version = "2.8", default-features = false, features = ["std", "memchr"] }
pest_derive = { version = "2.8", default-features = false, features = ["std"] }
# Core-module codegen only; the component-model API is not used.
wasm-encoder = { version = "0.253", default-features = false, features = ["std"] }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
