[package]
name = "typhoon-transpiler"
version = "0.1.0"
edition = "2024"
description = "TyphooN multi-language indicator transpiler and WASM/WGSL codegen pipeline"
license = "BUSL-1.1"

[dependencies]
pest = { workspace = true }
pest_derive = { workspace = true }
# Core-module codegen only; the component-model API is not used.
wasm-encoder = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
