[package]
name = "typhoon-indicators"
version = "0.1.0"
edition = "2021"
description = "High-performance indicator computation for TyphooN Terminal — compiles to Wasm"
license = "LicenseRef-BSL-1.1"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
opt-level = "z"    # optimize for size
lto = true
strip = true
