[package]
name = "typhoon-web-server"
version = "0.1.0"
edition = "2021"

[dependencies]
typhoon-web-protocol = { path = "../web-protocol" }
axum = { version = "0.8", features = ["ws"] }
axum-server = { version = "0.8", features = ["tls-rustls"] }
tokio = { version = "1", features = ["sync", "net"] }
serde_json = "1"
tracing = "0.1"
futures-util = "0.3"
tower-http = { version = "0.6", features = ["fs"] }
subtle = "2"  # Constant-time comparison for passphrase auth (prevents timing attacks)
