[package]
name = "typhoon-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
typhoon-web-protocol = { path = "../web-protocol" }
eframe = { version = "0.34", default-features = false, features = ["glow"] }
egui = "0.34"
egui_plot = "0.35"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
web-sys = { version = "0.3", features = [
    "WebSocket",
    "MessageEvent",
    "ErrorEvent",
    "Location",
    "Window",
    "BinaryType",
    "CloseEvent",
] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
tracing = "0.1"
console_error_panic_hook = "0.1"
